istio-ideas.yaml
##################################################################################################
# MongoDB service and deployment (port 27017)
# Careful: MongoDB should be executed BEFORE express to avoid REFUSED_CONNECT errors
##################################################################################################
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongodb
#   labels:
#     app: mongodb
# spec:
#   ports:
#   - port: 27017
#     name: mongo
#   selector:
#     app: mongodb
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongodb
#   labels:
#     app: mongodb
#     #version: v3
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mongodb
#       #version: v3
#   template:
#     metadata:
#       labels:
#         app: mongodb
#         #version: v3
#     spec:
#       containers:
#       - name: mongodb 
#         image: gcr.io/third-pulsar-248314/ideas-mongodb
#         imagePullPolicy: IfNotPresent
#         command:
#           - mongod
#           - "--bind_ip"
#           - "0.0.0.0"
#         ports:
#         - containerPort: 27017
# ---
##################################################################################################
# Angular services and deployment (port 80)
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: angularpage
  labels:
    app: angularpage
    service: angularpage
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: angularpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: angularpage
  name: angularpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angularpage
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"bd8027f012944ee9983e53569851958111bf8baf49c316ff0c265a9bfee74c14","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: angularpage
    spec:
      containers:
      - image: gcr.io/third-pulsar-248314/ideas-angular
        imagePullPolicy: IfNotPresent
        name: angularpage
        ports:
        - containerPort: 80
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - angularpage.$(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15011
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - MUTUAL_TLS
        - --statusPort
        - "15020"
        - --applicationPorts
        - "80"
        image: gke.gcr.io/istio/proxyv2:1.1.17-gke.2
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 20; while [ $(netstat -plunt | grep tcp | grep -v envoy | wc
                -l | xargs) -ne 0 ]; do sleep 1; done
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      serviceAccountName: ideas-angular-sa
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.ideas-angular-sa
status: {}
---
##################################################################################################
# Express service and deployment (port 3000)
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details
    service: details
spec:
  type: NodePort
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: details
  name: details
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: '{"version":"bd8027f012944ee9983e53569851958111bf8baf49c316ff0c265a9bfee74c14","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: details
    spec:
      containers:
      - env:
        - name: MONGO_DB_URL
          value: mongodb://10.132.0.17:27017/aepi
        image: gcr.io/third-pulsar-248314/ideas-express
        imagePullPolicy: IfNotPresent
        name: details
        ports:
        - containerPort: 3000
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - details.$(POD_NAMESPACE)
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:15011
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --proxyAdminPort
        - "15000"
        - --concurrency
        - "2"
        - --controlPlaneAuthPolicy
        - MUTUAL_TLS
        - --statusPort
        - "15020"
        - --applicationPorts
        - "3000"
        image: gke.gcr.io/istio/proxyv2:1.1.17-gke.2
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - sleep 20; while [ $(netstat -plunt | grep tcp | grep -v envoy | wc
                -l | xargs) -ne 0 ]; do sleep 1; done
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15020
          initialDelaySeconds: 1
          periodSeconds: 2
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      serviceAccountName: ideas-express-sa
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.ideas-express-sa
status: {}
---
