ideas-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ideas-gateway
spec:
  selector:
    istio: istio-ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: angular
      protocol: TCP
      targetPort: 80
    hosts:
    - "*"
  - port:
      number: 3000
      name: express
      protocol: TCP
      targetPort: 3000
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: twoports
spec:
  hosts:
  - "*"
  gateways:
  - ideas-gateway
  tcp:
  - match:  
    - port: 3000
    route:
    - destination:
        host: details.default.svc.cluster.local
        port:
          number: 3000
  - match: 
    - port: 80
    route:
    - destination:
        host: angularpage
        port:
          number: 80
