ideas-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ideas-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ideas-frontend-ip"
#spec:
#  backend:
#    serviceName: ideas-backend
#    servicePort: 80
spec:
    rules:
    - http:
        paths:
        - path: /*
          backend:
              serviceName: angularpage
              servicePort: 80
        - path: /api/*
          backend:
              serviceName: details
              servicePort: 3000
